--- a/public/assets/styles/button.css
+++ b/public/assets/styles/button.css
@@ -29,15 +29,15 @@
   
   .button:hover:before {
     top: -70%;
-    background-image: radial-gradient(circle, #7d2ae8 20%, transparent 20%),
-      radial-gradient(circle, transparent 20%, #7d2ae8 20%, transparent 30%),
-      radial-gradient(circle, #7d2ae8 20%, transparent 20%),
-      radial-gradient(circle, #7d2ae8 20%, transparent 20%),
-      radial-gradient(circle, transparent 10%, #7d2ae8 15%, transparent 20%),
-      radial-gradient(circle, #7d2ae8 20%, transparent 20%),
-      radial-gradient(circle, #7d2ae8 20%, transparent 20%),
-      radial-gradient(circle, #7d2ae8 20%, transparent 20%),
-      radial-gradient(circle, #7d2ae8 20%, transparent 20%);
+    background-image: radial-gradient(circle, #369381 20%, transparent 20%),
+      radial-gradient(circle, transparent 20%, #369381 20%, transparent 30%),
+      radial-gradient(circle, #369381 20%, transparent 20%),
+      radial-gradient(circle, #369381 20%, transparent 20%),
+      radial-gradient(circle, transparent 10%, #369381 15%, transparent 20%),
+      radial-gradient(circle, #369381 20%, transparent 20%),
+      radial-gradient(circle, #369381 20%, transparent 20%),
+      radial-gradient(circle, #369381 20%, transparent 20%),
+      radial-gradient(circle, #369381 20%, transparent 20%);
     background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%,
       10% 10%, 18% 18%;
     background-position: 50% 120%;
@@ -64,13 +64,13 @@
   
   .button:hover::after {
     bottom: -70%;
-    background-image: radial-gradient(circle, #7d2ae8 20%, transparent 20%),
-      radial-gradient(circle, #7d2ae8 20%, transparent 20%),
-      radial-gradient(circle, transparent 10%, #7d2ae8 15%, transparent 20%),
-      radial-gradient(circle, #7d2ae8 20%, transparent 20%),
-      radial-gradient(circle, #7d2ae8 20%, transparent 20%),
-      radial-gradient(circle, #7d2ae8 20%, transparent 20%),
-      radial-gradient(circle, #7d2ae8 20%, transparent 20%);
+    background-image: radial-gradient(circle, #369381 20%, transparent 20%),
+      radial-gradient(circle, #369381 20%, transparent 20%),
+      radial-gradient(circle, transparent 10%, #369381 15%, transparent 20%),
+      radial-gradient(circle, #369381 20%, transparent 20%),
+      radial-gradient(circle, #369381 20%, transparent 20%),
+      radial-gradient(circle, #369381 20%, transparent 20%),
+      radial-gradient(circle, #369381 20%, transparent 20%);
     background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 20% 20%, 18% 18%;
     background-position: 50% 0%;
     animation: greenbottomBubbles 0.6s ease;
