--- a/public/assets/styles/showHeros.css
+++ b/public/assets/styles/showHeros.css
@@ -20,14 +20,14 @@ main {
 
 .hero-grid {
     margin-top: 50px;
-    width: 750px;
+    width: 100vw;
+    height: 75vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    gap: 30px;
-    /* display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+    gap: 50px;
 }
 
  .hero-card {
@@ -36,25 +36,24 @@ main {
     height: 325px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    background-color: rgba(0, 0, 0, 0.2);
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 10px;
-    text-align: center;
     transition: transform 0.3s, box-shadow 0.3s;
-    box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.5);
+    /* box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.5); */
 }
 
 .hero-card:hover {
     transform: scale(1.05);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); */
     cursor: pointer;
 }
 
 .hero-image {
-    width: 100%;
-    height: 300px;
-    border-radius: 10px;
-    /* border: 2px solid #fff; */
+    width: 325px;
+    height: 325px;
 }
 
 .hero-name {
