--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -7,12 +7,15 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to right, #1e3c72, #2a5298);
+    /* background: linear-gradient(to right, #1e3c72, #2a5298);*/
+    background-image: url('../images/game/background.avif');
+    background-repeat: no-repeat;
+    background-size: cover;
     color: #fff;
 }
 
 header {
-    background-color: #333;
+    background-color: rgba(0, 0, 0, 0.9);
     height: 8vh;
     display: flex;
     justify-content: center;
@@ -23,9 +26,10 @@ header {
 header a {
     margin: 0;
     font-size: 2rem;
+    font-weight: bolder;
     text-transform: uppercase;
+    color: #369381;
     letter-spacing: 2px;
-    color: #fff;
     text-decoration: none;
 }
 
