--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -7,19 +7,22 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    /* background: linear-gradient(to right, #1e3c72, #2a5298);*/
-    background-image: url('../images/game/background.avif');
+    background-image: url('../images/game/background.gif');
     background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
 }
 
 header {
-    background-color: rgba(0, 0, 0, 0.9);
-    height: 8vh;
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
+    padding-top: 20px;
+    padding-bottom: 20px;
     justify-content: center;
-    align-items: center;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 }
 
