--- a/public/assets/styles/showHeros.css
+++ b/public/assets/styles/showHeros.css
@@ -6,36 +6,15 @@ main {
     height: 100vh;
 }
 
-.hero-create-button {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    align-items: center;
-    gap: 10px;
-    height: 10vh;
-}
-
-.button {
-    width: 90px;
-}
-
-.not-found {
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-}
-
 .heading {
-    font-size: 2rem;
+    padding-top: 150px;
+    font-size: 3rem;
 }
 
 .hero-grid {
-    margin-top: 50px;
+    padding-top: 100px;
     width: 90vw;
-    height: 70vh;
+    height: 50%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -44,7 +23,6 @@ main {
 }
 
  .hero-card {
-    padding: 10px;
     width: 400;
     height: 400px;
     display: flex;
@@ -55,12 +33,10 @@ main {
     background-size: cover;
     border-radius: 10px;
     transition: transform 0.3s, box-shadow 0.3s;
-    /* box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.5); */
 }
 
 .hero-card:hover {
     transform: scale(1.05);
-    /* box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); */
     cursor: pointer;
 }
 
@@ -72,32 +48,3 @@ main {
 .hero-name {
     font-size: 1.5rem;
 }
-
-/* .hero-card {
-    height: 350px;
-    background-color: #444;
-    border-radius: 10px;
-    text-align: center;
-    transition: transform 0.3s, box-shadow 0.3s;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-}
-
-.hero-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-    cursor: pointer;
-}
-
-.hero-image {
-    width: 341px;
-    height: 300px;
-    border-radius: 10px;
-    border: 3px solid #fff;
-}
-
-
-.hero-description {
-    font-size: 1rem;
-    line-height: 1.5;
-    color: #ddd;
-} */
