--- a/public/assets/styles/fight.css
+++ b/public/assets/styles/fight.css
@@ -1,3 +1,7 @@
+body {
+    background-image: url('../images/game/background2.gif');
+}
+
 main {
     display: flex;
     flex-direction: row;
@@ -62,4 +66,48 @@ input {
 input:hover {
     background-color: rgba(0, 0, 0, 0.7);
     cursor: pointer;
+}
+
+.progress-container {
+    width: 100%;
+    height: 30px;
+    background-color: white; /* White background for the empty part */
+    border-radius: 5px;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); /* Optional: Shadow for a nice look */
+    display: block;
+}
+
+.progress-bar {
+    height: 100%;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: bold;
+    transition: width 0.3s ease-in-out; /* Smooth transition for health change */
+}
+
+.hero-bar {
+    background-color: green; /* Hero's colored progress bar */
+}
+
+.monster-bar {
+    background-color: red; /* Monster's colored progress bar */
+}
+
+.button {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.button:hover {
+    background-color: #45a049;
 }
