--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -11,6 +11,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
+    height: 100%;
 }
 
 header {
@@ -34,5 +35,5 @@ header a {
     color: #369381;
     letter-spacing: 2px;
     text-decoration: none;
-}
+} 
 
