--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -14,29 +14,31 @@ body {
     height: 100%;
 }
 
-@media (min-width: 1280px) {
+header {
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    padding: 20px 0;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
     
-    header {
-        background-color: rgba(0, 0, 0, 0.5);
-        display: flex;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        justify-content: center;
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        right: 0px;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-    }
-    
-    header a {
-        margin: 0;
-        font-size: 2rem;
-        font-weight: bolder;
-        text-transform: uppercase;
-        color: #369381;
-        letter-spacing: 2px;
-        text-decoration: none;
-    } 
+header a {
+    margin: 0;
+    font-size: 2rem;
+    font-weight: bolder;
+    text-transform: uppercase;
+    color: #369381;
+    letter-spacing: 2px;
+    text-decoration: none;
+}
 
- }
+/* Responsive header adjustments */
+@media (max-width: 768px) {
+    header a {
+       font-size: 1.5rem;
+    }
+}
